Update styling to prevent home screen from scrolling on mobile

--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -85,4 +85,10 @@
     body {
         @apply bg-background text-foreground;
     }
+
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+    }
 }
